applets/systemtray: Disambiguate Electron/Chromium tray icons

All Electron-based apps register SNI tray icons with the same Id
(chrome_status_icon_1), causing per-app visibility settings to affect
all Electron apps at once. Resolve each SNI item's owning process via
D-Bus PID lookup and /proc/PID/cmdline to extract the actual app name,
then append it to the config key for disambiguation.

BUG: 470840